--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>or you can rub your dingus</title>
+  <style>
+    .hr { height: 100vh; }
+  </style>
 </head>
 <body>
   spaghetti with meatballs
+
+  <div class="hr"></div>
+  <img src="./m/lau.jpg" alt="lau" width="600">
 </body>
 </html>
