--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>or you can rub your dingus</title>
+  <title>alexamy personal site</title>
   <style>
     .hr { height: 100vh; }
   </style>
 </head>
 <body>
-  spaghetti with meatballs
+  <p><b>spaghetti with meatballs</b></p>
+
+  <p>
+    find more at:
+    <ul>
+      <li><a href="https://github.com/alexamy" target="_blank">Github</a></li>
+    </ul>
+  </p>
+  
 
   <div class="hr"></div>
   <img src="./m/lau.jpg" alt="lau" width="600">
