--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>alexamy personal site</title>
+  <title>alexamy's personal site</title>
   <style>
     .hr { height: 100vh; }
   </style>
