--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       <li><a href="https://github.com/alexamy" target="_blank">Github</a></li>
     </ul>
   </p>
-  
 
   <div class="hr"></div>
-  <img src="./m/lau.jpg" alt="lau" width="600">
+  <img src="/assets/lau.jpg" alt="lau" width="600">
 </body>
 </html>
