--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>alexamy's personal site</title>
   <style>
-    .hr {
-      height: 100vh;
-    }
-
     img {
       max-width: 100%;
       height: auto;
+    }
+
+    .expand-vertically {
+      height: 100vh;
     }
   </style>
 </head>
@@ -25,7 +25,7 @@
     </ul>
   </p>
 
-  <div class="hr"></div>
+  <div class="expand-vertically"></div>
   <img src="/assets/lau.jpg" alt="lau" width="600">
 </body>
 </html>
