--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <p><b>spaghetti with meatballs</b></p>
+  <h3>spaghetti with meatballs</h3>
 
   <p>
     find more at:
