--- a/pages/index.html
+++ b/pages/index.html
@@ -8,10 +8,18 @@
 <!---->
 
 <h3>spaghetti with meatballs</h3>
+
 <p>
   find more at:
   <ul>
     <li><a href="https://github.com/alexamy" target="_blank">Github</a></li>
+  </ul>
+</p>
+
+<p>
+  my stuff:
+  <ul>
+    <li><a href="/blog">Blog</a></li>
   </ul>
 </p>
 
