--- a/template.html
+++ b/template.html
@@ -4,12 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" sizes="32x32">
-<style>
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-</style>
+<link rel="stylesheet" href="/assets/reset.css">
+<link rel="stylesheet" href="/assets/styles.css">
 {{head}}
 </head>
 
