add default styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,21 +7,17 @@
 
 <!---->
 
-<h3>spaghetti with meatballs</h3>
+<h1>spaghetti with meatballs</h1>
 
-<p>
-  find more at:
-  <ul>
-    <li><a href="https://github.com/alexamy" target="_blank">Github</a></li>
-  </ul>
-</p>
+<p>Find more at:</p>
+<ul>
+  <li><a href="https://github.com/alexamy" target="_blank">Github</a></li>
+</ul>
 
-<p>
-  my stuff:
-  <ul>
-    <li><a href="/blog">Blog</a></li>
-  </ul>
-</p>
+<p>My stuff:</p>
+<ul>
+  <li><a href="/blog">Blog</a></li>
+</ul>
 
 <div class="expand-vertically"></div>
 <img src="/assets/lau.jpg" alt="the special picture" width="600">
