--- a/pages/index.html
+++ b/pages/index.html
@@ -20,4 +20,4 @@
 </ul>
 
 <div class="expand-vertically"></div>
-<img src="/assets/lau.jpg" alt="the special picture" width="600">
+<img loading="lazy" src="/assets/lau.jpg" alt="the special picture" width="600">
