use absolute links

--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
 
 <p>My stuff:</p>
 <ul>
-  <li><a href="blog">Blog</a></li>
+  <li><a href="/blog">Blog</a></li>
 </ul>
 
 <div class="expand-vertically"></div>
