change main page title

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-<title>alexamy's personal site</title>
+<title>Aleksandr Chashchin (alexamy)</title>
 <style>
   .expand-vertically {
     height: 100vh;
