change main page

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,23 +1,22 @@
 <title>Aleksandr Chashchin (alexamy)</title>
 <style>
-  .expand-vertically {
-    height: 100vh;
+  .footer-link {
+    display: none;
   }
 </style>
 
 <!---->
+<p>Hi! My name is Alex. Nice to meet you!</p>
 
-<h1>spaghetti with meatballs</h1>
-
-<p>Find more at:</p>
+<p>You can find more at:</p>
 <ul>
   <li><a href="https://github.com/alexamy" target="_blank">Github</a></li>
+  <li><a href="https://www.linkedin.com/in/aleksandr-chashchin-a4585b293/">LinkedIn</a></li>
 </ul>
 
 <p>My stuff:</p>
 <ul>
   <li><a href="/blog">Blog</a></li>
+  <li><a href="https://soundcloud.com/alexamy">SoundCloud</a></li>
+  <li><a href="https://alexamy.itch.io/">Itch.io</a></li>
 </ul>
-
-<div class="expand-vertically"></div>
-<img loading="lazy" src="/assets/lau.jpg" alt="the special picture" width="600">
